[package]
name = "c20web"
version = "0.1.0"
authors = ["Anthony Heathcoat <aeheathc@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadpool = "1.7.1"
lazy_static = "1.4.0"
config = "0.10.1"
clap = "2.33.0"
log = "0.4.8"
log4rs = "0.11.0"